// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/admin_console/data_retention_settings/channel_list should match snapshot 1`] = `
<div>
  <div
    class="PolicyChannelsList"
  >
    <div
      class="DataGrid customTable"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value=""
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle hidden"
            data-testid="clear-search"
          />
        </div>
        <div
          class="Filter"
        >
          <button
            class="Filter_button"
            type="button"
          >
            <i
              class="Icon icon-filter-variant"
            />
            Filters
          </button>
          <div
            class="Filter_content"
          >
            <div
              class="Filter_header"
            >
              <div
                class="Filter_title"
              >
                Filter by
              </div>
              <a
                class="Filter_reset"
              >
                Reset filters
              </a>
            </div>
            <hr />
            <div
              class="Filter_lists"
            >
              <div
                class="FilterList FilterList__full"
              >
                <div
                  class="FilterList_name"
                >
                  Teams
                </div>
                <div
                  class="css-b62m3t-container"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-2-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class="filterListSelect__control css-13cymwt-control"
                  >
                    <div
                      class="filterListSelect__value-container filterListSelect__value-container--is-multi css-hlgwow"
                    >
                      <div
                        class="filterListSelect__placeholder css-1jqq78o-placeholder"
                        id="react-select-2-placeholder"
                      >
                        Search and select teams
                      </div>
                      <div
                        class="filterListSelect__input-container css-19bb58m"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-describedby="react-select-2-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class="filterListSelect__input"
                          id="adminConsoleTeamFilterDropdown"
                          role="combobox"
                          spellcheck="false"
                          style="color: inherit; background: 0px; opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="filterListSelect__indicators css-1wy0on6"
                    >
                      <span
                        class="filterListSelect__indicator-separator css-1u9des2-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="filterListSelect__indicator filterListSelect__dropdown-indicator css-1xc3v61-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="FilterList"
              >
                <div
                  class="FilterList_name"
                >
                  Channels
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="public"
                        name="public"
                        type="checkbox"
                      />
                      Public
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="private"
                        name="private"
                        type="checkbox"
                      />
                      Private
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="deleted"
                        name="deleted"
                        type="checkbox"
                      />
                      Archived
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="btn btn-primary btn-sm Filter_apply"
              disabled=""
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_header"
      >
        <div
          class="DataGrid_cell"
        >
          Name
        </div>
        <div
          class="DataGrid_cell"
        >
          Team
        </div>
        <div
          class="DataGrid_cell"
        />
      </div>
      <div
        class="DataGrid_rows"
      >
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
          >
            <div
              class="ChannelList__nameColumn"
              id="channel-name-123"
            >
              <svg
                class="channel-icon"
                data-testid="DN-archive-icon"
                fill="currentColor"
                height="1em"
                version="1.1"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M20,12.5c-0.3,0.4-1.7,1.2-4,1.6c0-0.7,0-1.4,0-2.1c0-0.5,0-0.9,0-1.3c1.2-0.2,2.4-0.5,3.3-0.9c0.1-0.1,0.3-0.1,0.4-0.2c0.2,0.7,0.3,1.6,0.3,2.4C20,12.2,20,12.3,20,12.5L20,12.5z
	 M10.5,16.4c0.5,0,1,0.1,1.5,0.1s1,0,1.5-0.1c-0.5,2-1.1,3.2-1.5,3.5C11.6,19.6,10.9,18.4,10.5,16.4z M12,14.5c-0.7,0-1.3,0-1.9-0.1
	c0-0.7-0.1-1.5-0.1-2.4c0-0.4,0-0.7,0-1.1c0.7,0.1,1.3,0.1,2,0.1s1.3,0,2-0.1c0,0.4,0,0.7,0,1.1c0,0.9-0.1,1.7-0.1,2.4
	C13.3,14.5,12.7,14.5,12,14.5z M13.8,8.9C13.2,9,12.6,9,12,9s-1.2,0-1.8-0.1C10.6,6.1,11.5,4.4,12,4C12.5,4.4,13.4,6.1,13.8,8.9z
	 M18.8,7.8c-0.7,0.3-1.7,0.7-3,0.9c-0.2-1.6-0.6-3.1-1.1-4.2C16.4,5.1,17.8,6.2,18.8,7.8z M5.2,7.8c1-1.5,2.4-2.7,4.2-3.3
	C8.9,5.6,8.5,7,8.2,8.7C6.9,8.4,5.9,8.1,5.2,7.8L5.2,7.8z M4.4,9.6c0.1,0.1,0.2,0.1,0.4,0.2c0.9,0.4,2,0.7,3.3,0.9
	C8,11.1,8,11.5,8,12c0,0.7,0,1.4,0.1,2.1c-2.3-0.4-3.7-1.2-4-1.6l0,0c0-0.2,0-0.3,0-0.5C4,11.2,4.1,10.3,4.4,9.6z M4.7,15.2
	c1,0.4,2.3,0.8,3.7,1c0.2,1.3,0.6,2.4,1,3.3C7.3,18.8,5.6,17.2,4.7,15.2z M19.3,15.2c-0.9,2-2.6,3.6-4.7,4.3c0.4-0.9,0.8-2,1-3.3
	C17,16,18.3,15.7,19.3,15.2L19.3,15.2z"
                />
              </svg>
              <div
                class="ChannelList__nameText"
              >
                <b
                  id="display-name-channel-123"
                >
                  DN
                </b>
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell"
          >
            teamDisplayName
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <a
              class="group-actions TeamList_editText"
              href="#"
              id="remove-channel-123"
            >
              Remove
            </a>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_footer"
      >
        <div
          class="DataGrid_cell"
        >
          1 - 1 of 1
          <button
            aria-label="Previous page"
            class="btn btn-quaternary btn-icon btn-sm ml-2 prev disabled"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-chevron-left"
              title="Previous Icon"
            />
          </button>
          <button
            aria-label="Next page"
            class="btn btn-quaternary btn-icon btn-sm next disabled"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-chevron-right"
              title="Next Icon"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/data_retention_settings/channel_list should match snapshot with paging 1`] = `
<div>
  <div
    class="PolicyChannelsList"
  >
    <div
      class="DataGrid customTable"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value=""
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle hidden"
            data-testid="clear-search"
          />
        </div>
        <div
          class="Filter"
        >
          <button
            class="Filter_button"
            type="button"
          >
            <i
              class="Icon icon-filter-variant"
            />
            Filters
          </button>
          <div
            class="Filter_content"
          >
            <div
              class="Filter_header"
            >
              <div
                class="Filter_title"
              >
                Filter by
              </div>
              <a
                class="Filter_reset"
              >
                Reset filters
              </a>
            </div>
            <hr />
            <div
              class="Filter_lists"
            >
              <div
                class="FilterList FilterList__full"
              >
                <div
                  class="FilterList_name"
                >
                  Teams
                </div>
                <div
                  class="css-b62m3t-container"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-3-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class="filterListSelect__control css-13cymwt-control"
                  >
                    <div
                      class="filterListSelect__value-container filterListSelect__value-container--is-multi css-hlgwow"
                    >
                      <div
                        class="filterListSelect__placeholder css-1jqq78o-placeholder"
                        id="react-select-3-placeholder"
                      >
                        Search and select teams
                      </div>
                      <div
                        class="filterListSelect__input-container css-19bb58m"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-describedby="react-select-3-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class="filterListSelect__input"
                          id="adminConsoleTeamFilterDropdown"
                          role="combobox"
                          spellcheck="false"
                          style="color: inherit; background: 0px; opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="filterListSelect__indicators css-1wy0on6"
                    >
                      <span
                        class="filterListSelect__indicator-separator css-1u9des2-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="filterListSelect__indicator filterListSelect__dropdown-indicator css-1xc3v61-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="FilterList"
              >
                <div
                  class="FilterList_name"
                >
                  Channels
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="public"
                        name="public"
                        type="checkbox"
                      />
                      Public
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="private"
                        name="private"
                        type="checkbox"
                      />
                      Private
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="deleted"
                        name="deleted"
                        type="checkbox"
                      />
                      Archived
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="btn btn-primary btn-sm Filter_apply"
              disabled=""
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_header"
      >
        <div
          class="DataGrid_cell"
        >
          Name
        </div>
        <div
          class="DataGrid_cell"
        >
          Team
        </div>
        <div
          class="DataGrid_cell"
        />
      </div>
      <div
        class="DataGrid_rows"
      >
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
          >
            <div
              class="ChannelList__nameColumn"
              id="channel-name-id0"
            >
              <svg
                class="channel-icon"
                data-testid="DN-archive-icon"
                fill="currentColor"
                height="1em"
                version="1.1"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M20,12.5c-0.3,0.4-1.7,1.2-4,1.6c0-0.7,0-1.4,0-2.1c0-0.5,0-0.9,0-1.3c1.2-0.2,2.4-0.5,3.3-0.9c0.1-0.1,0.3-0.1,0.4-0.2c0.2,0.7,0.3,1.6,0.3,2.4C20,12.2,20,12.3,20,12.5L20,12.5z
	 M10.5,16.4c0.5,0,1,0.1,1.5,0.1s1,0,1.5-0.1c-0.5,2-1.1,3.2-1.5,3.5C11.6,19.6,10.9,18.4,10.5,16.4z M12,14.5c-0.7,0-1.3,0-1.9-0.1
	c0-0.7-0.1-1.5-0.1-2.4c0-0.4,0-0.7,0-1.1c0.7,0.1,1.3,0.1,2,0.1s1.3,0,2-0.1c0,0.4,0,0.7,0,1.1c0,0.9-0.1,1.7-0.1,2.4
	C13.3,14.5,12.7,14.5,12,14.5z M13.8,8.9C13.2,9,12.6,9,12,9s-1.2,0-1.8-0.1C10.6,6.1,11.5,4.4,12,4C12.5,4.4,13.4,6.1,13.8,8.9z
	 M18.8,7.8c-0.7,0.3-1.7,0.7-3,0.9c-0.2-1.6-0.6-3.1-1.1-4.2C16.4,5.1,17.8,6.2,18.8,7.8z M5.2,7.8c1-1.5,2.4-2.7,4.2-3.3
	C8.9,5.6,8.5,7,8.2,8.7C6.9,8.4,5.9,8.1,5.2,7.8L5.2,7.8z M4.4,9.6c0.1,0.1,0.2,0.1,0.4,0.2c0.9,0.4,2,0.7,3.3,0.9
	C8,11.1,8,11.5,8,12c0,0.7,0,1.4,0.1,2.1c-2.3-0.4-3.7-1.2-4-1.6l0,0c0-0.2,0-0.3,0-0.5C4,11.2,4.1,10.3,4.4,9.6z M4.7,15.2
	c1,0.4,2.3,0.8,3.7,1c0.2,1.3,0.6,2.4,1,3.3C7.3,18.8,5.6,17.2,4.7,15.2z M19.3,15.2c-0.9,2-2.6,3.6-4.7,4.3c0.4-0.9,0.8-2,1-3.3
	C17,16,18.3,15.7,19.3,15.2L19.3,15.2z"
                />
              </svg>
              <div
                class="ChannelList__nameText"
              >
                <b
                  id="display-name-channel-id0"
                >
                  DN0
                </b>
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell"
          >
            teamDisplayName
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <a
              class="group-actions TeamList_editText"
              href="#"
              id="remove-channel-id0"
            >
              Remove
            </a>
          </div>
        </div>
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
          >
            <div
              class="ChannelList__nameColumn"
              id="channel-name-id1"
            >
              <svg
                class="channel-icon"
                data-testid="DN-archive-icon"
                fill="currentColor"
                height="1em"
                version="1.1"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M20,12.5c-0.3,0.4-1.7,1.2-4,1.6c0-0.7,0-1.4,0-2.1c0-0.5,0-0.9,0-1.3c1.2-0.2,2.4-0.5,3.3-0.9c0.1-0.1,0.3-0.1,0.4-0.2c0.2,0.7,0.3,1.6,0.3,2.4C20,12.2,20,12.3,20,12.5L20,12.5z
	 M10.5,16.4c0.5,0,1,0.1,1.5,0.1s1,0,1.5-0.1c-0.5,2-1.1,3.2-1.5,3.5C11.6,19.6,10.9,18.4,10.5,16.4z M12,14.5c-0.7,0-1.3,0-1.9-0.1
	c0-0.7-0.1-1.5-0.1-2.4c0-0.4,0-0.7,0-1.1c0.7,0.1,1.3,0.1,2,0.1s1.3,0,2-0.1c0,0.4,0,0.7,0,1.1c0,0.9-0.1,1.7-0.1,2.4
	C13.3,14.5,12.7,14.5,12,14.5z M13.8,8.9C13.2,9,12.6,9,12,9s-1.2,0-1.8-0.1C10.6,6.1,11.5,4.4,12,4C12.5,4.4,13.4,6.1,13.8,8.9z
	 M18.8,7.8c-0.7,0.3-1.7,0.7-3,0.9c-0.2-1.6-0.6-3.1-1.1-4.2C16.4,5.1,17.8,6.2,18.8,7.8z M5.2,7.8c1-1.5,2.4-2.7,4.2-3.3
	C8.9,5.6,8.5,7,8.2,8.7C6.9,8.4,5.9,8.1,5.2,7.8L5.2,7.8z M4.4,9.6c0.1,0.1,0.2,0.1,0.4,0.2c0.9,0.4,2,0.7,3.3,0.9
	C8,11.1,8,11.5,8,12c0,0.7,0,1.4,0.1,2.1c-2.3-0.4-3.7-1.2-4-1.6l0,0c0-0.2,0-0.3,0-0.5C4,11.2,4.1,10.3,4.4,9.6z M4.7,15.2
	c1,0.4,2.3,0.8,3.7,1c0.2,1.3,0.6,2.4,1,3.3C7.3,18.8,5.6,17.2,4.7,15.2z M19.3,15.2c-0.9,2-2.6,3.6-4.7,4.3c0.4-0.9,0.8-2,1-3.3
	C17,16,18.3,15.7,19.3,15.2L19.3,15.2z"
                />
              </svg>
              <div
                class="ChannelList__nameText"
              >
                <b
                  id="display-name-channel-id1"
                >
                  DN1
                </b>
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell"
          >
            teamDisplayName
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <a
              class="group-actions TeamList_editText"
              href="#"
              id="remove-channel-id1"
            >
              Remove
            </a>
          </div>
        </div>
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
          >
            <div
              class="ChannelList__nameColumn"
              id="channel-name-id2"
            >
              <svg
                class="channel-icon"
                data-testid="DN-archive-icon"
                fill="currentColor"
                height="1em"
                version="1.1"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M20,12.5c-0.3,0.4-1.7,1.2-4,1.6c0-0.7,0-1.4,0-2.1c0-0.5,0-0.9,0-1.3c1.2-0.2,2.4-0.5,3.3-0.9c0.1-0.1,0.3-0.1,0.4-0.2c0.2,0.7,0.3,1.6,0.3,2.4C20,12.2,20,12.3,20,12.5L20,12.5z
	 M10.5,16.4c0.5,0,1,0.1,1.5,0.1s1,0,1.5-0.1c-0.5,2-1.1,3.2-1.5,3.5C11.6,19.6,10.9,18.4,10.5,16.4z M12,14.5c-0.7,0-1.3,0-1.9-0.1
	c0-0.7-0.1-1.5-0.1-2.4c0-0.4,0-0.7,0-1.1c0.7,0.1,1.3,0.1,2,0.1s1.3,0,2-0.1c0,0.4,0,0.7,0,1.1c0,0.9-0.1,1.7-0.1,2.4
	C13.3,14.5,12.7,14.5,12,14.5z M13.8,8.9C13.2,9,12.6,9,12,9s-1.2,0-1.8-0.1C10.6,6.1,11.5,4.4,12,4C12.5,4.4,13.4,6.1,13.8,8.9z
	 M18.8,7.8c-0.7,0.3-1.7,0.7-3,0.9c-0.2-1.6-0.6-3.1-1.1-4.2C16.4,5.1,17.8,6.2,18.8,7.8z M5.2,7.8c1-1.5,2.4-2.7,4.2-3.3
	C8.9,5.6,8.5,7,8.2,8.7C6.9,8.4,5.9,8.1,5.2,7.8L5.2,7.8z M4.4,9.6c0.1,0.1,0.2,0.1,0.4,0.2c0.9,0.4,2,0.7,3.3,0.9
	C8,11.1,8,11.5,8,12c0,0.7,0,1.4,0.1,2.1c-2.3-0.4-3.7-1.2-4-1.6l0,0c0-0.2,0-0.3,0-0.5C4,11.2,4.1,10.3,4.4,9.6z M4.7,15.2
	c1,0.4,2.3,0.8,3.7,1c0.2,1.3,0.6,2.4,1,3.3C7.3,18.8,5.6,17.2,4.7,15.2z M19.3,15.2c-0.9,2-2.6,3.6-4.7,4.3c0.4-0.9,0.8-2,1-3.3
	C17,16,18.3,15.7,19.3,15.2L19.3,15.2z"
                />
              </svg>
              <div
                class="ChannelList__nameText"
              >
                <b
                  id="display-name-channel-id2"
                >
                  DN2
                </b>
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell"
          >
            teamDisplayName
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <a
              class="group-actions TeamList_editText"
              href="#"
              id="remove-channel-id2"
            >
              Remove
            </a>
          </div>
        </div>
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
          >
            <div
              class="ChannelList__nameColumn"
              id="channel-name-id3"
            >
              <svg
                class="channel-icon"
                data-testid="DN-archive-icon"
                fill="currentColor"
                height="1em"
                version="1.1"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M20,12.5c-0.3,0.4-1.7,1.2-4,1.6c0-0.7,0-1.4,0-2.1c0-0.5,0-0.9,0-1.3c1.2-0.2,2.4-0.5,3.3-0.9c0.1-0.1,0.3-0.1,0.4-0.2c0.2,0.7,0.3,1.6,0.3,2.4C20,12.2,20,12.3,20,12.5L20,12.5z
	 M10.5,16.4c0.5,0,1,0.1,1.5,0.1s1,0,1.5-0.1c-0.5,2-1.1,3.2-1.5,3.5C11.6,19.6,10.9,18.4,10.5,16.4z M12,14.5c-0.7,0-1.3,0-1.9-0.1
	c0-0.7-0.1-1.5-0.1-2.4c0-0.4,0-0.7,0-1.1c0.7,0.1,1.3,0.1,2,0.1s1.3,0,2-0.1c0,0.4,0,0.7,0,1.1c0,0.9-0.1,1.7-0.1,2.4
	C13.3,14.5,12.7,14.5,12,14.5z M13.8,8.9C13.2,9,12.6,9,12,9s-1.2,0-1.8-0.1C10.6,6.1,11.5,4.4,12,4C12.5,4.4,13.4,6.1,13.8,8.9z
	 M18.8,7.8c-0.7,0.3-1.7,0.7-3,0.9c-0.2-1.6-0.6-3.1-1.1-4.2C16.4,5.1,17.8,6.2,18.8,7.8z M5.2,7.8c1-1.5,2.4-2.7,4.2-3.3
	C8.9,5.6,8.5,7,8.2,8.7C6.9,8.4,5.9,8.1,5.2,7.8L5.2,7.8z M4.4,9.6c0.1,0.1,0.2,0.1,0.4,0.2c0.9,0.4,2,0.7,3.3,0.9
	C8,11.1,8,11.5,8,12c0,0.7,0,1.4,0.1,2.1c-2.3-0.4-3.7-1.2-4-1.6l0,0c0-0.2,0-0.3,0-0.5C4,11.2,4.1,10.3,4.4,9.6z M4.7,15.2
	c1,0.4,2.3,0.8,3.7,1c0.2,1.3,0.6,2.4,1,3.3C7.3,18.8,5.6,17.2,4.7,15.2z M19.3,15.2c-0.9,2-2.6,3.6-4.7,4.3c0.4-0.9,0.8-2,1-3.3
	C17,16,18.3,15.7,19.3,15.2L19.3,15.2z"
                />
              </svg>
              <div
                class="ChannelList__nameText"
              >
                <b
                  id="display-name-channel-id3"
                >
                  DN3
                </b>
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell"
          >
            teamDisplayName
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <a
              class="group-actions TeamList_editText"
              href="#"
              id="remove-channel-id3"
            >
              Remove
            </a>
          </div>
        </div>
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
          >
            <div
              class="ChannelList__nameColumn"
              id="channel-name-id4"
            >
              <svg
                class="channel-icon"
                data-testid="DN-archive-icon"
                fill="currentColor"
                height="1em"
                version="1.1"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M20,12.5c-0.3,0.4-1.7,1.2-4,1.6c0-0.7,0-1.4,0-2.1c0-0.5,0-0.9,0-1.3c1.2-0.2,2.4-0.5,3.3-0.9c0.1-0.1,0.3-0.1,0.4-0.2c0.2,0.7,0.3,1.6,0.3,2.4C20,12.2,20,12.3,20,12.5L20,12.5z
	 M10.5,16.4c0.5,0,1,0.1,1.5,0.1s1,0,1.5-0.1c-0.5,2-1.1,3.2-1.5,3.5C11.6,19.6,10.9,18.4,10.5,16.4z M12,14.5c-0.7,0-1.3,0-1.9-0.1
	c0-0.7-0.1-1.5-0.1-2.4c0-0.4,0-0.7,0-1.1c0.7,0.1,1.3,0.1,2,0.1s1.3,0,2-0.1c0,0.4,0,0.7,0,1.1c0,0.9-0.1,1.7-0.1,2.4
	C13.3,14.5,12.7,14.5,12,14.5z M13.8,8.9C13.2,9,12.6,9,12,9s-1.2,0-1.8-0.1C10.6,6.1,11.5,4.4,12,4C12.5,4.4,13.4,6.1,13.8,8.9z
	 M18.8,7.8c-0.7,0.3-1.7,0.7-3,0.9c-0.2-1.6-0.6-3.1-1.1-4.2C16.4,5.1,17.8,6.2,18.8,7.8z M5.2,7.8c1-1.5,2.4-2.7,4.2-3.3
	C8.9,5.6,8.5,7,8.2,8.7C6.9,8.4,5.9,8.1,5.2,7.8L5.2,7.8z M4.4,9.6c0.1,0.1,0.2,0.1,0.4,0.2c0.9,0.4,2,0.7,3.3,0.9
	C8,11.1,8,11.5,8,12c0,0.7,0,1.4,0.1,2.1c-2.3-0.4-3.7-1.2-4-1.6l0,0c0-0.2,0-0.3,0-0.5C4,11.2,4.1,10.3,4.4,9.6z M4.7,15.2
	c1,0.4,2.3,0.8,3.7,1c0.2,1.3,0.6,2.4,1,3.3C7.3,18.8,5.6,17.2,4.7,15.2z M19.3,15.2c-0.9,2-2.6,3.6-4.7,4.3c0.4-0.9,0.8-2,1-3.3
	C17,16,18.3,15.7,19.3,15.2L19.3,15.2z"
                />
              </svg>
              <div
                class="ChannelList__nameText"
              >
                <b
                  id="display-name-channel-id4"
                >
                  DN4
                </b>
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell"
          >
            teamDisplayName
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <a
              class="group-actions TeamList_editText"
              href="#"
              id="remove-channel-id4"
            >
              Remove
            </a>
          </div>
        </div>
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
          >
            <div
              class="ChannelList__nameColumn"
              id="channel-name-id5"
            >
              <svg
                class="channel-icon"
                data-testid="DN-archive-icon"
                fill="currentColor"
                height="1em"
                version="1.1"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M20,12.5c-0.3,0.4-1.7,1.2-4,1.6c0-0.7,0-1.4,0-2.1c0-0.5,0-0.9,0-1.3c1.2-0.2,2.4-0.5,3.3-0.9c0.1-0.1,0.3-0.1,0.4-0.2c0.2,0.7,0.3,1.6,0.3,2.4C20,12.2,20,12.3,20,12.5L20,12.5z
	 M10.5,16.4c0.5,0,1,0.1,1.5,0.1s1,0,1.5-0.1c-0.5,2-1.1,3.2-1.5,3.5C11.6,19.6,10.9,18.4,10.5,16.4z M12,14.5c-0.7,0-1.3,0-1.9-0.1
	c0-0.7-0.1-1.5-0.1-2.4c0-0.4,0-0.7,0-1.1c0.7,0.1,1.3,0.1,2,0.1s1.3,0,2-0.1c0,0.4,0,0.7,0,1.1c0,0.9-0.1,1.7-0.1,2.4
	C13.3,14.5,12.7,14.5,12,14.5z M13.8,8.9C13.2,9,12.6,9,12,9s-1.2,0-1.8-0.1C10.6,6.1,11.5,4.4,12,4C12.5,4.4,13.4,6.1,13.8,8.9z
	 M18.8,7.8c-0.7,0.3-1.7,0.7-3,0.9c-0.2-1.6-0.6-3.1-1.1-4.2C16.4,5.1,17.8,6.2,18.8,7.8z M5.2,7.8c1-1.5,2.4-2.7,4.2-3.3
	C8.9,5.6,8.5,7,8.2,8.7C6.9,8.4,5.9,8.1,5.2,7.8L5.2,7.8z M4.4,9.6c0.1,0.1,0.2,0.1,0.4,0.2c0.9,0.4,2,0.7,3.3,0.9
	C8,11.1,8,11.5,8,12c0,0.7,0,1.4,0.1,2.1c-2.3-0.4-3.7-1.2-4-1.6l0,0c0-0.2,0-0.3,0-0.5C4,11.2,4.1,10.3,4.4,9.6z M4.7,15.2
	c1,0.4,2.3,0.8,3.7,1c0.2,1.3,0.6,2.4,1,3.3C7.3,18.8,5.6,17.2,4.7,15.2z M19.3,15.2c-0.9,2-2.6,3.6-4.7,4.3c0.4-0.9,0.8-2,1-3.3
	C17,16,18.3,15.7,19.3,15.2L19.3,15.2z"
                />
              </svg>
              <div
                class="ChannelList__nameText"
              >
                <b
                  id="display-name-channel-id5"
                >
                  DN5
                </b>
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell"
          >
            teamDisplayName
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <a
              class="group-actions TeamList_editText"
              href="#"
              id="remove-channel-id5"
            >
              Remove
            </a>
          </div>
        </div>
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
          >
            <div
              class="ChannelList__nameColumn"
              id="channel-name-id6"
            >
              <svg
                class="channel-icon"
                data-testid="DN-archive-icon"
                fill="currentColor"
                height="1em"
                version="1.1"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M20,12.5c-0.3,0.4-1.7,1.2-4,1.6c0-0.7,0-1.4,0-2.1c0-0.5,0-0.9,0-1.3c1.2-0.2,2.4-0.5,3.3-0.9c0.1-0.1,0.3-0.1,0.4-0.2c0.2,0.7,0.3,1.6,0.3,2.4C20,12.2,20,12.3,20,12.5L20,12.5z
	 M10.5,16.4c0.5,0,1,0.1,1.5,0.1s1,0,1.5-0.1c-0.5,2-1.1,3.2-1.5,3.5C11.6,19.6,10.9,18.4,10.5,16.4z M12,14.5c-0.7,0-1.3,0-1.9-0.1
	c0-0.7-0.1-1.5-0.1-2.4c0-0.4,0-0.7,0-1.1c0.7,0.1,1.3,0.1,2,0.1s1.3,0,2-0.1c0,0.4,0,0.7,0,1.1c0,0.9-0.1,1.7-0.1,2.4
	C13.3,14.5,12.7,14.5,12,14.5z M13.8,8.9C13.2,9,12.6,9,12,9s-1.2,0-1.8-0.1C10.6,6.1,11.5,4.4,12,4C12.5,4.4,13.4,6.1,13.8,8.9z
	 M18.8,7.8c-0.7,0.3-1.7,0.7-3,0.9c-0.2-1.6-0.6-3.1-1.1-4.2C16.4,5.1,17.8,6.2,18.8,7.8z M5.2,7.8c1-1.5,2.4-2.7,4.2-3.3
	C8.9,5.6,8.5,7,8.2,8.7C6.9,8.4,5.9,8.1,5.2,7.8L5.2,7.8z M4.4,9.6c0.1,0.1,0.2,0.1,0.4,0.2c0.9,0.4,2,0.7,3.3,0.9
	C8,11.1,8,11.5,8,12c0,0.7,0,1.4,0.1,2.1c-2.3-0.4-3.7-1.2-4-1.6l0,0c0-0.2,0-0.3,0-0.5C4,11.2,4.1,10.3,4.4,9.6z M4.7,15.2
	c1,0.4,2.3,0.8,3.7,1c0.2,1.3,0.6,2.4,1,3.3C7.3,18.8,5.6,17.2,4.7,15.2z M19.3,15.2c-0.9,2-2.6,3.6-4.7,4.3c0.4-0.9,0.8-2,1-3.3
	C17,16,18.3,15.7,19.3,15.2L19.3,15.2z"
                />
              </svg>
              <div
                class="ChannelList__nameText"
              >
                <b
                  id="display-name-channel-id6"
                >
                  DN6
                </b>
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell"
          >
            teamDisplayName
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <a
              class="group-actions TeamList_editText"
              href="#"
              id="remove-channel-id6"
            >
              Remove
            </a>
          </div>
        </div>
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
          >
            <div
              class="ChannelList__nameColumn"
              id="channel-name-id7"
            >
              <svg
                class="channel-icon"
                data-testid="DN-archive-icon"
                fill="currentColor"
                height="1em"
                version="1.1"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M20,12.5c-0.3,0.4-1.7,1.2-4,1.6c0-0.7,0-1.4,0-2.1c0-0.5,0-0.9,0-1.3c1.2-0.2,2.4-0.5,3.3-0.9c0.1-0.1,0.3-0.1,0.4-0.2c0.2,0.7,0.3,1.6,0.3,2.4C20,12.2,20,12.3,20,12.5L20,12.5z
	 M10.5,16.4c0.5,0,1,0.1,1.5,0.1s1,0,1.5-0.1c-0.5,2-1.1,3.2-1.5,3.5C11.6,19.6,10.9,18.4,10.5,16.4z M12,14.5c-0.7,0-1.3,0-1.9-0.1
	c0-0.7-0.1-1.5-0.1-2.4c0-0.4,0-0.7,0-1.1c0.7,0.1,1.3,0.1,2,0.1s1.3,0,2-0.1c0,0.4,0,0.7,0,1.1c0,0.9-0.1,1.7-0.1,2.4
	C13.3,14.5,12.7,14.5,12,14.5z M13.8,8.9C13.2,9,12.6,9,12,9s-1.2,0-1.8-0.1C10.6,6.1,11.5,4.4,12,4C12.5,4.4,13.4,6.1,13.8,8.9z
	 M18.8,7.8c-0.7,0.3-1.7,0.7-3,0.9c-0.2-1.6-0.6-3.1-1.1-4.2C16.4,5.1,17.8,6.2,18.8,7.8z M5.2,7.8c1-1.5,2.4-2.7,4.2-3.3
	C8.9,5.6,8.5,7,8.2,8.7C6.9,8.4,5.9,8.1,5.2,7.8L5.2,7.8z M4.4,9.6c0.1,0.1,0.2,0.1,0.4,0.2c0.9,0.4,2,0.7,3.3,0.9
	C8,11.1,8,11.5,8,12c0,0.7,0,1.4,0.1,2.1c-2.3-0.4-3.7-1.2-4-1.6l0,0c0-0.2,0-0.3,0-0.5C4,11.2,4.1,10.3,4.4,9.6z M4.7,15.2
	c1,0.4,2.3,0.8,3.7,1c0.2,1.3,0.6,2.4,1,3.3C7.3,18.8,5.6,17.2,4.7,15.2z M19.3,15.2c-0.9,2-2.6,3.6-4.7,4.3c0.4-0.9,0.8-2,1-3.3
	C17,16,18.3,15.7,19.3,15.2L19.3,15.2z"
                />
              </svg>
              <div
                class="ChannelList__nameText"
              >
                <b
                  id="display-name-channel-id7"
                >
                  DN7
                </b>
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell"
          >
            teamDisplayName
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <a
              class="group-actions TeamList_editText"
              href="#"
              id="remove-channel-id7"
            >
              Remove
            </a>
          </div>
        </div>
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
          >
            <div
              class="ChannelList__nameColumn"
              id="channel-name-id8"
            >
              <svg
                class="channel-icon"
                data-testid="DN-archive-icon"
                fill="currentColor"
                height="1em"
                version="1.1"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M20,12.5c-0.3,0.4-1.7,1.2-4,1.6c0-0.7,0-1.4,0-2.1c0-0.5,0-0.9,0-1.3c1.2-0.2,2.4-0.5,3.3-0.9c0.1-0.1,0.3-0.1,0.4-0.2c0.2,0.7,0.3,1.6,0.3,2.4C20,12.2,20,12.3,20,12.5L20,12.5z
	 M10.5,16.4c0.5,0,1,0.1,1.5,0.1s1,0,1.5-0.1c-0.5,2-1.1,3.2-1.5,3.5C11.6,19.6,10.9,18.4,10.5,16.4z M12,14.5c-0.7,0-1.3,0-1.9-0.1
	c0-0.7-0.1-1.5-0.1-2.4c0-0.4,0-0.7,0-1.1c0.7,0.1,1.3,0.1,2,0.1s1.3,0,2-0.1c0,0.4,0,0.7,0,1.1c0,0.9-0.1,1.7-0.1,2.4
	C13.3,14.5,12.7,14.5,12,14.5z M13.8,8.9C13.2,9,12.6,9,12,9s-1.2,0-1.8-0.1C10.6,6.1,11.5,4.4,12,4C12.5,4.4,13.4,6.1,13.8,8.9z
	 M18.8,7.8c-0.7,0.3-1.7,0.7-3,0.9c-0.2-1.6-0.6-3.1-1.1-4.2C16.4,5.1,17.8,6.2,18.8,7.8z M5.2,7.8c1-1.5,2.4-2.7,4.2-3.3
	C8.9,5.6,8.5,7,8.2,8.7C6.9,8.4,5.9,8.1,5.2,7.8L5.2,7.8z M4.4,9.6c0.1,0.1,0.2,0.1,0.4,0.2c0.9,0.4,2,0.7,3.3,0.9
	C8,11.1,8,11.5,8,12c0,0.7,0,1.4,0.1,2.1c-2.3-0.4-3.7-1.2-4-1.6l0,0c0-0.2,0-0.3,0-0.5C4,11.2,4.1,10.3,4.4,9.6z M4.7,15.2
	c1,0.4,2.3,0.8,3.7,1c0.2,1.3,0.6,2.4,1,3.3C7.3,18.8,5.6,17.2,4.7,15.2z M19.3,15.2c-0.9,2-2.6,3.6-4.7,4.3c0.4-0.9,0.8-2,1-3.3
	C17,16,18.3,15.7,19.3,15.2L19.3,15.2z"
                />
              </svg>
              <div
                class="ChannelList__nameText"
              >
                <b
                  id="display-name-channel-id8"
                >
                  DN8
                </b>
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell"
          >
            teamDisplayName
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <a
              class="group-actions TeamList_editText"
              href="#"
              id="remove-channel-id8"
            >
              Remove
            </a>
          </div>
        </div>
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
          >
            <div
              class="ChannelList__nameColumn"
              id="channel-name-id9"
            >
              <svg
                class="channel-icon"
                data-testid="DN-archive-icon"
                fill="currentColor"
                height="1em"
                version="1.1"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M20,12.5c-0.3,0.4-1.7,1.2-4,1.6c0-0.7,0-1.4,0-2.1c0-0.5,0-0.9,0-1.3c1.2-0.2,2.4-0.5,3.3-0.9c0.1-0.1,0.3-0.1,0.4-0.2c0.2,0.7,0.3,1.6,0.3,2.4C20,12.2,20,12.3,20,12.5L20,12.5z
	 M10.5,16.4c0.5,0,1,0.1,1.5,0.1s1,0,1.5-0.1c-0.5,2-1.1,3.2-1.5,3.5C11.6,19.6,10.9,18.4,10.5,16.4z M12,14.5c-0.7,0-1.3,0-1.9-0.1
	c0-0.7-0.1-1.5-0.1-2.4c0-0.4,0-0.7,0-1.1c0.7,0.1,1.3,0.1,2,0.1s1.3,0,2-0.1c0,0.4,0,0.7,0,1.1c0,0.9-0.1,1.7-0.1,2.4
	C13.3,14.5,12.7,14.5,12,14.5z M13.8,8.9C13.2,9,12.6,9,12,9s-1.2,0-1.8-0.1C10.6,6.1,11.5,4.4,12,4C12.5,4.4,13.4,6.1,13.8,8.9z
	 M18.8,7.8c-0.7,0.3-1.7,0.7-3,0.9c-0.2-1.6-0.6-3.1-1.1-4.2C16.4,5.1,17.8,6.2,18.8,7.8z M5.2,7.8c1-1.5,2.4-2.7,4.2-3.3
	C8.9,5.6,8.5,7,8.2,8.7C6.9,8.4,5.9,8.1,5.2,7.8L5.2,7.8z M4.4,9.6c0.1,0.1,0.2,0.1,0.4,0.2c0.9,0.4,2,0.7,3.3,0.9
	C8,11.1,8,11.5,8,12c0,0.7,0,1.4,0.1,2.1c-2.3-0.4-3.7-1.2-4-1.6l0,0c0-0.2,0-0.3,0-0.5C4,11.2,4.1,10.3,4.4,9.6z M4.7,15.2
	c1,0.4,2.3,0.8,3.7,1c0.2,1.3,0.6,2.4,1,3.3C7.3,18.8,5.6,17.2,4.7,15.2z M19.3,15.2c-0.9,2-2.6,3.6-4.7,4.3c0.4-0.9,0.8-2,1-3.3
	C17,16,18.3,15.7,19.3,15.2L19.3,15.2z"
                />
              </svg>
              <div
                class="ChannelList__nameText"
              >
                <b
                  id="display-name-channel-id9"
                >
                  DN9
                </b>
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell"
          >
            teamDisplayName
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <a
              class="group-actions TeamList_editText"
              href="#"
              id="remove-channel-id9"
            >
              Remove
            </a>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_footer"
      >
        <div
          class="DataGrid_cell"
        >
          1 - 10 of 30
          <button
            aria-label="Previous page"
            class="btn btn-quaternary btn-icon btn-sm ml-2 prev disabled"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-chevron-left"
              title="Previous Icon"
            />
          </button>
          <button
            aria-label="Next page"
            class="btn btn-quaternary btn-icon btn-sm next "
            type="button"
          >
            <i
              class="icon icon-chevron-right"
              title="Next Icon"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
